# game-engine

./: .gitignore  BUILD  WORKSPACE  go.mod  go.sum
cmd/game-core/: BUILD  client.go  home.html  hub.go  main.go  room.go
cmd/gamecore/: BUILD  main.go
docs/: backend-interface.md
internal/core/: BUILD.bazel  client.go  hub.go  room.go
pkg/gamerun/: run.go
pkg/gamework/: README.md  game.go
pkg/tictactoe/: BUILD.bazel  tictactoe.go
